--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   },
   "dependencies": {
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
+    "@tanstack/react-query": "^5.8.7",
+    "axios": "^1.6.2",
+    "firebase": "^10.6.0",
     "keen-slider": "^6.8.6",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
@@ -19,12 +22,15 @@
     "react-awesome-slider": "^4.1.0",
     "react-dom": "^18.2.0",
     "react-helmet-async": "^2.0.1",
+    "react-hook-form": "^7.48.2",
     "react-icons": "^4.12.0",
     "react-parallax": "^3.5.1",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.20.0",
+    "react-simple-captcha": "^9.3.0",
     "react-tabs": "^6.0.2",
     "sort-by": "^1.2.0",
+    "sweetalert2": "^11.10.1",
     "swiper": "^11.0.5"
   },
   "devDependencies": {
